tui/src/snapshots/codex_tui__app_server_render__tests__prompt_idle_prompt_is_separated_from_transcript_vt100.snap
---
source: tui/src/app_server_render.rs
expression: terminal.backend().vt100().screen().contents()
---
• ok


› Assign new task to CodexPotter

  project [main] · ctrl+g editor
