tui/src/snapshots/codex_tui__app_server_render__tests__prompt_screen_startup_banner_uses_pre_resolved_model_config.snap
---
source: tui/src/app_server_render.rs
expression: lines_to_plain_text(&lines)
---
                   __                                 __    __
                  /\ \                               /\ \__/\ \__
    ___    ___    \_\ \     __   __  _  _____     ___\ \ ,_\ \ ,_\    __   _ __
   /'___\ / __`\  /'_` \  /'__`\/\ \/'\/\ '__`\  / __`\ \ \/\ \ \/  /'__`\/\`'__\
  /\ \__//\ \L\ \/\ \L\ \/\  __/\/>  </\ \ \L\ \/\ \L\ \ \ \_\ \ \_/\  __/\ \ \/
  \ \____\ \____/\ \___,_\ \____\/\_/\_\\ \ ,__/\ \____/\ \__\\ \__\ \____\\ \_\
   \/____/\/___/  \/__,_ /\/____/\//\/_/ \ \ \/  \/___/  \/__/ \/__/\/____/ \/_/
                                          \ \_\
                                           \/_/                            v0.0.0

  directory: /Users/example/repo  gpt-5.4 high [fast]
