tui/src/snapshots/codex_tui__app_server_render__tests__render_only_ctrl_c_preserves_pending_explored_output_vt100.snap
---
source: tui/src/app_server_render.rs
expression: terminal.backend().vt100().screen().contents()
---







  ↳ Project created: .codexpotter/projects/2026/01/29/18/MAIN.md

• Explored
  └ List ls -la
    Search README.md in .codexpotter
