tui/src/snapshots/codex_tui__app_server_render__tests__render_only_idle_prompt_is_separated_from_transcript_vt100.snap
---
source: tui/src/app_server_render.rs
expression: terminal.backend().vt100().screen().contents()
---
─ Worked for 4m 59s ──────────────────────────────────────────────────────

• ok


› Assign new task to CodexPotter

  . · ctrl+g editor
