tui/src/snapshots/codex_tui__app_server_render__tests__render_only_live_explored_coalesces_mixed_call_reads_vt100.snap
---
source: tui/src/app_server_render.rs
expression: terminal.backend().vt100().screen().contents()
---

› test prompt


• Explored
  └ List .codexpotter
    Read resume_design.md

• Working (0s) · 100% context left


› Assign new task to CodexPotter

  project [main] · ctrl+g editor
