tui/src/snapshots/codex_tui__app_server_render__tests__render_only_potter_session_succeeded_block_vt100.snap
---
source: tui/src/app_server_render.rs
expression: terminal.backend().vt100().screen().contents()
---







› test prompt


• Ran true

─ Worked for 0s ────────────────────────────────────────────────────────────────

• - Finished the project.

────────────────────────────────────────────────────────────────────────────────

  CodexPotter summary: iterated 4 rounds in 24m 34s.

    Task history: .codexpotter/projects/2026/02/01/11/MAIN.md

    Git:          fb827a2 -> 662d232
