tui/src/snapshots/codex_tui__app_server_render__tests__render_only_worked_for_separator_vt100.snap
---
source: tui/src/app_server_render.rs
expression: terminal.backend().vt100().screen().contents()
---







› test prompt


• Ran true

─ Worked for 0s ────────────────────────────────────────────────────────────────

• ok
